<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2021 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- CONST -->
    <string name="pandroid_event_viewer_str">Pandroid Event Viewer</string>
    <string name="const_string_preferences">PANDROID_EVENT_VIEWER_PREFERENCES</string>
    <string name="item_tab_main_text">Filter</string>
    <string name="item_tab_event_list_text">Event list</string>
    <string name="system_str">System</string>
    <string name="all_str">All</string>
    <string name="tags_label_str">Tags</string>
    <string name="comments_label_str">Comments</string>
    <string name="group_label_str">Group</string>
    <string name="agent_label_str">Agent name</string>
    <string name="type_label_str">Type</string>
    <string name="severity_label_str">Severity</string>
    <string name="reset_button_str">Reset</string>
    <string name="search_button_str">Search</string>
    <string name="loading_label_str">Loading</string>
    <string name="label_pandora_str">Options</string>
    <string name="refresh_label_str">Refresh</string>
    <string name="about_label_str">About</string>
    <string name="url_label_str">URL</string>
    <string name="user_label_str">User</string>
    <string name="password_label_str">Password</string>
    <string name="api_password_label_str">API Password</string>
    <string name="update_button_str">Update</string>
    <string name="option_title_str">Options</string>
    <string name="load_more_events_button_str">Load more events</string>
    <string name="empty_label_str">Empty list events</string>
    <string name="refresh_time_label_str">Refresh time</string>
    <string name="set_as_filter_watcher_button_str">Set this filter for notifications</string>
    <string name="validate_event_button_str">Validate Event</string>
    <string name="config_update_succesful_str">Configuration successfully updated.</string>
    <string name="config_update_fail_str">Configuration update failed.</string>
    <string name="please_set_preferences_str">Please set your preferences, like the API URL, user and password for your Pandora FMS.</string>
    <string name="preferences_set_demo_pandora_str">Pandroid Event Viewer is connecting with the Pandora FMS public demo, please change the preferences for your Pandora FMS.</string>
    <string name="filter_update_succesful_str">Filter successfully updated.</string>
    <string name="filter_update_fail_str">Filter update failed.</string>
    <string name="notification_criticity_0_str">There are %s events and all in Maintenance status.</string>
    <string name="notification_criticity_1_str">There are %s events and some are in Informational status.</string>
    <string name="notification_criticity_2_str">There are %s events and some are in Normal status.</string>
    <string name="notification_criticity_3_str">There are %s events and some are in Warning status.</string>
    <string name="notification_criticity_4_str">There are %s events and some are in Critical status.</string>
    <string name="loading_events_criticity_0_str">Loading events (all in Maintenance status).</string>
    <string name="loading_events_criticity_1_str">Loading events (some are in Informational status).</string>
    <string name="loading_events_criticity_2_str">Loading events (some are in Normal status).</string>
    <string name="loading_events_criticity_3_str">Loading events (some are in Warning status).</string>
    <string name="loading_events_criticity_4_str">Loading events (some are in Critical status).</string>
    <string name="successful_validate_event_str">Event successfully validated.</string>
    <string name="fail_validate_event_str">Event validation failed.</string>
    <string name="status_label_str">Status</string>
    <string name="event_search_label_str">Event search</string>
    <string name="max_time_old_event_str">Oldest event</string>
    <string name="licensed_under_gpl_str">Licensed under GPL v2</string>
    <string name="develop_team_str">Developers:\nMiguel de Dios and Santiago Munín</string>
    <string name="alert_recovered_str">Alert recovered</string>
    <string name="alert_manual_validation_str">Alert manually validated</string>
    <string name="going_up_warning_str">Going from critical to warning</string>
    <string name="going_down_critical_str">Going to critical status</string>
    <string name="going_up_normal_str">Going to normal status</string>
    <string name="going_down_warning_str">Going down to warning</string>
    <string name="alert_fired_str">Alert fired</string>
    <string name="new_agent_str">New agent created</string>
    <string name="recon_str">Host detected by Recontask</string>
    <string name="unknown_str">Unknown type:</string>
    <string name="unknown_event_str">Unknown event</string>
    <string name="validate_event_label_str">Event validated</string>
    <string name="pandroid_event_viewer_description_str">Real time event viewer for Pandora FMS.</string>
    <string name="pandroid_info_txt"><b>Welcome to Pandora FMS Event viewer for Android</b></string>
    <string name="pandroid_info_long_txt"><p>This app can be used to display the status of events generated by a Pandora FMS monitoring server in a convenient and autonomous way. From this app you can see events in real time, and even validate or filter them.</p><p>The default configuration points to the Pandora FMS demo server at firefly.artica.es. Please change it to point to your own Pandora FMS server.</p></string>
    <string name="check_connection">Connection status</string>
    <string name="connection">Connection</string>
    <string name="notification">Notification</string>
    <string name="vibration">Vibration</string>
    <string name="led_flash">Led flashes</string>
    <string name="sound">Sound</string>
    <string name="select_sound">Select notification sound</string>
    <string name="silence">Silence</string>
    <string name="tag_label_str">Tag</string>
    <string name="advanced_options">Show advanced search options</string>
    <string name="empty">- Empty -</string>
    <string name="artica_copyright">Copyright (©) 2011 Artica</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="text_ok_button">OK</string>
    <string name="pandorafms_logo_description">PandoraFMS\'s logo</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="incident_created">Incident created</string>
    <string name="title_empty">Sorry, you must provide a title</string>
    <string name="creating_incident">Creating new incident…</string>
    <string name="create_incident">Create incident</string>
    <string name="create_incident_group_error">There was an error creating the incident: unrecognized event group. Please, contact administrator.</string>
    <string name="url_not_valid">Invalid URL. Please, insert a valid URL</string>
    <string name="certificate_not_valid">This server has a certificate not signed by a CA, do you trust it?</string>
    <string name="options_not_saved">Options not saved.</string>
    <string name="notification_error_parsing">There was an error retrieving data from the server.</string>
    <string name="save_profile_button_str">Save profile</string>
    <string name="profile_label_str">Stored filters</string>
    <string name="filter_options_label_str">Filter options</string>
    <string name="profile_name">Insert the profile\'s name</string>
    <string name="profile_saved">Profile saved</string>
    <string name="profile_already_exists">A profile with that name already exists.</string>
    <string name="profile_name_character_not_allowed">The | character is not allowed.</string>
    <string name="profile_delete">Delete profile</string>
    <string name="connection_problem">There was a problem. Check your connection.</string>
    <string name="connection_settings_problem">The operation can not be performed until you configure a correct connection.</string>
    <string name="unknown_version">Unknown version</string>
    <string name="enable_background_service">Check in background</string>
    <string name="default_profile_can_not_remove">The default profile can not be removed</string>
    <string name="connection_problems">Connection failed</string>
    <string name="timeout_connections_label_str">Timeout connections</string>
    <string name="seconds_label_str">seconds</string>

</resources>
