<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background_pandora"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#7EB628"
        android:orientation="horizontal" >
		

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="EVENT VIEWER"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
    
<ScrollView
     android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <TextView
                style="@style/options_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/connection" />

            <LinearLayout
                style="@style/margin_pandora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    style="@style/label_pandora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/url_label_str" />

                <EditText
                    android:id="@+id/url"
                    style="@style/edittext_pandora"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEditText"
                    android:singleLine="true" />

                <TextView
                    style="@style/label_pandora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/user_label_str" />

                <EditText
                    android:id="@+id/user"
                    style="@style/edittext_pandora"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    style="@style/label_pandora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/password_label_str" />

                <EditText
                    android:id="@+id/password"
                    style="@style/edittext_pandora"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    style="@style/label_pandora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/api_password_label_str" />

                <EditText
                    android:id="@+id/api_password"
                    style="@style/edittext_pandora"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    style="@style/label_pandora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="@string/refresh_time_label_str" />

                <Spinner
                    android:id="@+id/refresh_combo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_dropdown"
                    />

                <TextView
                    style="@style/label_pandora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="@string/timeout_connections_label_str" />
                
                <Spinner
                    android:id="@+id/timeout_connections_combo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_dropdown"
                    />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <EditText
                        android:id="@+id/timeout_connections"
                        style="@style/edittext_pandora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:gravity="right"
                        android:inputType="number"
                        android:singleLine="true" />

                    <TextView
                        style="@style/label_pandora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="@string/seconds_label_str" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/label_pandora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:text="@string/enable_background_service" />

                    <CheckBox
                        android:id="@+id/background_service_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0" />
                </LinearLayout>

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:stretchColumns="0,1" >

                    <TableRow android:layout_marginTop="10dp" >

                        <TextView
                            android:id="@+id/check_connection_status"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:drawableBottom="@drawable/help"
                            android:text="@string/check_connection" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <TextView
                style="@style/options_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/notification" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/label_pandora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/vibration" />

                    <CheckBox
                        android:id="@+id/vibration_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/label_pandora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/led_flash" />

                    <CheckBox
                        android:id="@+id/led_flash_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/label_pandora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/sound" />

                    <Button
                        android:id="@+id/sound_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@drawable/pandora_button" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/update_options"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/pandora_button"
                android:text="@string/update_button_str" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
</LinearLayout>