<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical" >
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    >

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >
        
        <TextView
                    style="@style/label_pandora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:text="Pandroid Event Viewer"
                    android:layout_marginBottom="30dp" />

        <ImageView
            android:id="@+id/img_logo_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:contentDescription="@string/pandorafms_logo_description"
            android:padding="5dp"
            android:src="@drawable/pandorafms_logo"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pandroid_info_txt"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/pandroid_info_long_txt"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/url_pandora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColorLink="#a3a3a3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            
            <CheckBox
                android:id="@+id/dont_show_again_extended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <TextView
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_show_again"
                android:textColor="#a3a3a3" />

        </LinearLayout>
        
       
        
    </LinearLayout>

</ScrollView>

 <Button
    android:id="@+id/button_ok_about"
    android:text="@string/text_ok_button"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:background="@drawable/pandora_button"
    />

</LinearLayout>